syntax = "proto3";
package otsimo.simple.v1;

option go_package = "pb";

service SimpleService {
  rpc GetFoo(GetFooReq) returns (Foo);
  rpc UpdateFoo(UpdateFooReq) returns (Foo);
}

message Foo {
  string id = 1;
  int32 count = 2;
}

message GetFooReq { string name = 1; }

message UpdateFooReq {
  string foo_id = 1;
  int32 count = 2;
}
